--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "import/export": "off",
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   }
 }
