--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"]
-    }
-  },
-  "exclude": []
+    // "baseUrl": "./src",
+    // "paths": {
+    //   "@/*": ["./*"]
+    // }
+  }
 }
