--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:react/jsx-runtime",
+    "plugin:valtio/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -29,6 +30,7 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "import/extensions": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-void": "off"
   }
 }
